# twomice-social

./: API.md  Cargo.toml  Dockerfile  README.md  run_tests.sh
.cargo/: config.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  docker.yml
src/: errors.rs  main.rs  service.rs
src/routes/: friend_requests.rs  friends.rs  mod.rs
